# flider

./: .gitignore  README.md  flider.py
flider_package/: MAINFEST.in  MANIFEST.in  README.md  setup.cfg  setup.py
flider_package/src/flider/: __init__.py  __main__.py  flider.py  init.txt  scripts.txt  server.txt  style.txt  user.txt  users.txt
flider_package/src/save_files/: index.flid  mysqlcontroller.flid  server.flid
