[metadata]
name = Flider
version = 0.0.7
author = Trevor Engen
author_email = Trevorengen@gmail.com
description = A lightweight function to build your basic flask app structure.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trevorengen/flider
project_urls =
    Bug Tracker = https://github.com/trevorengen/flider/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src